# rCore

./: .neoconf.json  .nvim.lua  rust-toolchain.toml
bootloader/: .gitignore
easy-fs/: Cargo.toml
easy-fs-fuse/: Cargo.toml
easy-fs-fuse/src/: lib.rs
easy-fs/src/: block_cache.rs  block_dev.rs  lib.rs  vfs.rs
easy-fs/src/layout/: bitmap.rs  dir_entry.rs  mod.rs  super_block.rs
fat/: Cargo.toml
fat-fuse/: Cargo.toml
fat-fuse/src/: block_file.rs  cli.rs  main.rs
fat/src/: bpb.rs  lib.rs
fat/src/volume/: mod.rs
fat/src/volume/reversed/: mod.rs
os/: .gitignore  Cargo.toml  Makefile  build.rs  rust-toolchain.toml  rust_analyzer.json
os/block-dev/: Cargo.toml
os/block-dev/src/: lib.rs
os/easy-fs/: Cargo.toml
os/easy-fs/src/: block_cache.rs  block_dev.rs  efs.rs  lib.rs  vfs.rs
os/easy-fs/src/layout/: bitmap.rs  dir_entry.rs  inode.rs
os/fat/: Cargo.toml
os/fat/src/: cluster.rs  control.rs  dir_entry.rs  inode.rs  lib.rs  sector.rs  util.rs  vfs.rs
os/fat/src/volume/: data.rs  fat.rs  mod.rs  reserved.rs
os/fat/src/volume/data/: dir_entry.rs  mod.rs
os/fat/src/volume/reserved/: bpb.rs  fs_info.rs  mod.rs
os/fat/src/volume/reversed/: bpb.rs
os/fat/tests/: size.rs
os/kernel/: .nvim.lua  Cargo.toml  Makefile  build.rs  make.nu
os/kernel/.cargo/: config.toml
os/kernel/src/: console.rs  lang_items.rs  linker-qemu.ld  logging.rs  main.rs  path.rs  stack_trace.rs  timer.rs
os/kernel/src/collections/: mod.rs
os/kernel/src/drivers/: gpu.rs  mod.rs  plic.rs
os/kernel/src/drivers/block/: mod.rs  virtio_blk.rs
os/kernel/src/drivers/bus/: mod.rs  virtio.rs
os/kernel/src/drivers/chardev/: mod.rs  ns16550a.rs
os/kernel/src/fs/: directory.rs  eventfd.rs  inode.rs  inode_easy.rs  mod.rs  pipe.rs  stdio.rs
os/kernel/src/memory/: address.rs  address_space.rs  buffer.rs  frame_allocator.rs  heap_allocator.rs  kernel_stack.rs  mod.rs  page_table.rs
os/kernel/src/ptr/: volatile.rs
os/kernel/src/sync/: condvar.rs  mutex.rs  semaphore.rs  up.rs
os/kernel/src/syscall/: fs.rs  graph.rs  input.rs  mod.rs  process.rs  sync.rs  thread.rs  time.rs
os/kernel/src/task/: context.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  signal.rs  switch.S  switch.rs  task.rs
os/kernel/src/trap/: context.rs  mod.rs  trap.S
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  linker-qemu.ld  logging.rs  main.rs  sbi.rs  stack_trace.rs  stopwatch.rs  timer.rs
os/src/boards/: qemu.rs
os/src/collections/: mod.rs
os/src/drivers/: input.rs  mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/fs/: eventfd.rs  inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/memory/: address.rs  address_space.rs  buffer.rs  frame_allocator.rs  kernel_stack.rs  mod.rs  page_table.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs
os/src/task/: context.rs  control.rs  id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  signal.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
os/vfs/: Cargo.toml
os/vfs/src/: dirent.rs  error.rs  lib.rs  stat.rs
user/: Cargo.toml  Makefile  rust_analyzer.json
user/src/: console.rs  fs.rs  graph.rs  io.rs  lang_items.rs  lib.rs  linker.ld  mem.rs  process.rs  signal.rs  sync.rs  syscall.rs  thread.rs
