[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.9"
enumflags2 = "0.7"
log = "0.4"
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
easy-fs = { path = "../easy-fs" }
spin = { version = "0.9", default-features = false, features = ["lazy"] }
tinybmp = "0.5"
embedded-graphics = "0.8"

[dependencies.goblin]
version = "0.7"
default-features = false
features = ["elf64", "elf32", "endian_fd"]

[dependencies.virtio-drivers]
git = "https://github.com/rcore-os/virtio-drivers"
branch = "rcore-tutorial"

[profile.release]
debug = true
