[workspace]
resolver = "2"
members = ["kernel", "easy-fs", "fat", "block-dev"]

[workspace.dependencies]
easy-fs = { path = "easy-fs" }                         # kernel
fat = { path = "fat" }                                 # kernel
block-dev = { path = "block-dev" }                     # kernel, easy-fs, fat
buddy_system_allocator = "0.9"                         # kernel
enumflags2 = "0.7"                                     # kernel, easy-fs, fat
log = "0.4"                                            # kernel, easy-fs
riscv = "0.11"                                         # kernel
sbi-rt = { version = "0.0.3" }                         # kernel
spin = { version = "0.9", default-features = false }   # kernel, easy-fs
tinybmp = "0.5"                                        # kernel
embedded-graphics = "0.8"                              # kernel
goblin = { version = "0.8", default-features = false } # kernel
[workspace.dependencies.virtio-drivers]
git = "https://github.com/rcore-os/virtio-drivers"
branch = "rcore-tutorial"

[profile.release]
debug = true
