[workspace]
resolver = "2"
members = ["kernel", "easy-fs", "fat", "block-dev", "vfs"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
vfs = { path = "vfs" }                                       # kernel, fat
easy-fs = { path = "easy-fs" }                               # kernel
fat = { path = "fat" }                                       # kernel
block-dev = { path = "block-dev" }                           # kernel, easy-fs, fat
buddy_system_allocator = "0.11"                              # kernel
enumflags2 = "0.7"                                           # kernel, easy-fs, fat
log = "0.4"                                                  # kernel, easy-fs
riscv = "0.13"                                               # kernel
sbi-rt = { version = "0.0.3" }                               # kernel
spin = { version = "0.9", default-features = false }         # kernel, easy-fs, fat
tinybmp = "0.6"                                              # kernel
embedded-graphics = "0.8"                                    # kernel
goblin = { version = "0.8", default-features = false }       # kernel
derive_more = { version = "0.99", default-features = false } # fat
[workspace.dependencies.virtio-drivers]
git = "https://github.com/rcore-os/virtio-drivers"
branch = "rcore-tutorial"

[profile.release]
debug = true
