[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.9.0"
enumflags2 = "0.7.7"
riscv = "0.11"
spin = { version = "0.9", default-features = false, features = ["lazy"] }
embedded-graphics = "0.8"
virtio-input-decoder = "0.1"
vfs = { path = "../os/vfs" }

[profile.release]
debug = true
