[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy_system_allocator = "0.11"
enumflags2 = "0.7.7"
riscv = "0.13"
spin = { version = "0.9", default-features = false, features = ["lazy"] }
embedded-graphics = "0.8"
virtio-input-decoder = "0.1"
vfs = { path = "../os/vfs" }

[profile.release]
debug = true
