[package]
name = "fat"
version = "0.1.0"
edition = "2021"

[dependencies]
enumflags2 = { workspace = true }
spin = { workspace = true, features = ["spin_mutex", "lazy"] }
block-dev = { workspace = true }
derive_more = { workspace = true, features = ["add", "from", "into"] }
log = { workspace = true }
