[package]
name = "kernel"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
vfs = { workspace = true }
fat = { workspace = true }
easy-fs = { workspace = true }
buddy_system_allocator = { workspace = true }
enumflags2 = { workspace = true }
log = { workspace = true }
riscv = { workspace = true }
sbi-rt = { workspace = true, features = ["legacy"] }
spin = { workspace = true, features = ["lazy"] }
tinybmp = { workspace = true }
embedded-graphics = { workspace = true }
goblin = { workspace = true, features = ["elf64", "elf32", "endian_fd"] }
virtio-drivers = { workspace = true }
block-dev = { workspace = true }
